objects/Manager__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <description>Sum of the salaries of the Developers which reports to this Manager</description>
    <label>Total Salary</label>
    <summarizedField>Total_Salary__c.Salary__c</summarizedField>
    <summaryForeignKey>Total_Salary__c.Manager__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>