objects/Manager__c/validationRules/Email_and_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_and_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(  Email__c  ), ISBLANK( Phone__c ))</errorConditionFormula>
    <errorMessage>You must fill email and phone before saving</errorMessage>
</ValidationRule>